Ease build lifecycle